Finalized topology planning, made vlans per-CN named, numbered, and described. Additionally added preliminary templates for access and trunk ports

--- a/templates/device_template.j2
+++ b/templates/device_template.j2
@@ -33,4 +33,11 @@ system {
     }
 
 }
+
 {% include 'layer3_interface.j2' %}
+
+{% include 'access_port.j2' %}
+
+{% include 'trunk_port.j2' %}
+
+{% include 'vlans.j2' %}
