--- a/templates/interfaces.j2
+++ b/templates/interfaces.j2
@@ -1,5 +1,5 @@
 interfaces {
-{% for item in interfaces %}
+{% for item in ip_interfaces %}
     {{ item.name }} {
         unit {{ item.unit }} {
             family inet {
