removing vlans from CN configuration

--- a/templates/device_template.j2
+++ b/templates/device_template.j2
@@ -42,7 +42,8 @@ system {
 
 }
 {% include 'interfaces.j2' %}
-
+{% if 'CN' not in hostname %}
 {% include 'vlans.j2' %}
+{% endif %}
 
 {% include 'protocols.j2' %}
