removed dead and native vlans from trunks

--- a/templates/interfaces.j2
+++ b/templates/interfaces.j2
@@ -20,6 +20,7 @@ interfaces {
             }
         }
 {% endfor %}
+{% set vlans = vlans[0:-2] %}
 {% for item in trunk_ports %}
     {{ item.name }} {
         unit 0 {
